[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpulens"
version = "0.1.0"
description = "GPU workload analyzer for Kubernetes clusters — semantic problem detection for AI infra teams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["gpu", "kubernetes", "ai-infrastructure", "dcgm", "nvidia", "mlops"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[project.scripts]
gpulens = "gpulens.cli:cli"

[project.urls]
Repository = "https://github.com/your-org/gpulens"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
